[gd_scene load_steps=147 format=2]

[ext_resource path="res://woman/woman/dragon.gd" type="Script" id=1]
[ext_resource path="res://ui/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://anim/3-dragon-man0000.png" type="Texture" id=3]
[ext_resource path="res://anim/3-dragon-man0001.png" type="Texture" id=4]
[ext_resource path="res://anim/3-dragon-man0002.png" type="Texture" id=5]
[ext_resource path="res://anim/3-dragon-woman0000.png" type="Texture" id=6]
[ext_resource path="res://anim/3-dragon-woman0001.png" type="Texture" id=7]
[ext_resource path="res://anim/3-dragon-woman0002.png" type="Texture" id=8]
[ext_resource path="res://anim/3-dragon-woman0003.png" type="Texture" id=9]
[ext_resource path="res://anim/3-dragon-woman0004.png" type="Texture" id=10]
[ext_resource path="res://anim/3-dragon-woman0005.png" type="Texture" id=11]
[ext_resource path="res://anim/3-dragon-woman0006.png" type="Texture" id=12]
[ext_resource path="res://anim/3-dragon-woman0007.png" type="Texture" id=13]
[ext_resource path="res://anim/3-dragon-woman0008.png" type="Texture" id=14]
[ext_resource path="res://anim/3-dragon-woman0009.png" type="Texture" id=15]
[ext_resource path="res://anim/3t-princess-man-1-0000.png" type="Texture" id=16]
[ext_resource path="res://anim/3t-princess-man-1-0001.png" type="Texture" id=17]
[ext_resource path="res://anim/3t-princess-man-1-0002.png" type="Texture" id=18]
[ext_resource path="res://anim/3t-princess-man-1-0003.png" type="Texture" id=19]
[ext_resource path="res://anim/3t-princess-man-1-0004.png" type="Texture" id=20]
[ext_resource path="res://anim/3t-princess-man-1-0005.png" type="Texture" id=21]
[ext_resource path="res://anim/3t-princess-man-1-0006.png" type="Texture" id=22]
[ext_resource path="res://anim/3t-princess-man-1-0007.png" type="Texture" id=23]
[ext_resource path="res://anim/3t-princess-man-1-0008.png" type="Texture" id=24]
[ext_resource path="res://anim/3t-princess-man-1-0009.png" type="Texture" id=25]
[ext_resource path="res://anim/3t-princess-man-1-0010.png" type="Texture" id=26]
[ext_resource path="res://anim/3t-princess-man-1-0011.png" type="Texture" id=27]
[ext_resource path="res://anim/3t-princess-man-1-0012.png" type="Texture" id=28]
[ext_resource path="res://anim/3t-princess-man-1-0013.png" type="Texture" id=29]
[ext_resource path="res://anim/3t-princess-man-1-0014.png" type="Texture" id=30]
[ext_resource path="res://anim/3t-princess-man-1-0015.png" type="Texture" id=31]
[ext_resource path="res://anim/3t-princess-man-1-0016.png" type="Texture" id=32]
[ext_resource path="res://anim/3t-princess-dragon0000.png" type="Texture" id=33]
[ext_resource path="res://anim/3t-princess-dragon0001.png" type="Texture" id=34]
[ext_resource path="res://anim/3t-princess-dragon0002.png" type="Texture" id=35]
[ext_resource path="res://anim/3t-princess-dragon0003.png" type="Texture" id=36]
[ext_resource path="res://anim/3t-princess-dragon0004.png" type="Texture" id=37]
[ext_resource path="res://anim/3t-princess-dragon0005.png" type="Texture" id=38]
[ext_resource path="res://anim/3t-princess-dragon0006.png" type="Texture" id=39]
[ext_resource path="res://anim/3t-princess-dragon0007.png" type="Texture" id=40]
[ext_resource path="res://anim/3t-princess-dragon0008.png" type="Texture" id=41]
[ext_resource path="res://anim/3t-princess-dragon0009.png" type="Texture" id=42]
[ext_resource path="res://anim/3t-princess-frame-knight.png" type="Texture" id=43]
[ext_resource path="res://anim/3t-princess-frame-dragon.png" type="Texture" id=44]
[ext_resource path="res://anim/3t-princess-man-2-0014.png" type="Texture" id=45]
[ext_resource path="res://anim/3t-princess-man-2-0015.png" type="Texture" id=46]
[ext_resource path="res://anim/3t-princess-man-2-0016.png" type="Texture" id=47]
[ext_resource path="res://anim/3t-princess-man-2-0017.png" type="Texture" id=48]
[ext_resource path="res://anim/3t-princess-man-2-0018.png" type="Texture" id=49]
[ext_resource path="res://anim/3t-princess-man-2-0019.png" type="Texture" id=50]
[ext_resource path="res://anim/3t-princess-man-2-0020.png" type="Texture" id=51]
[ext_resource path="res://anim/3t-princess-man-2-0021.png" type="Texture" id=52]
[ext_resource path="res://anim/3t-princess-dragon0010.png" type="Texture" id=53]
[ext_resource path="res://anim/3t-princess-dragon0011.png" type="Texture" id=54]
[ext_resource path="res://anim/3t-princess-dragon0012.png" type="Texture" id=55]
[ext_resource path="res://anim/3t-princess-dragon0013.png" type="Texture" id=56]
[ext_resource path="res://anim/3t-princess-dragon0014.png" type="Texture" id=57]
[ext_resource path="res://anim/3t-princess-dragon0015.png" type="Texture" id=58]
[ext_resource path="res://anim/3t-princess-dragon0016.png" type="Texture" id=59]
[ext_resource path="res://anim/3t-princess-dragon0017.png" type="Texture" id=60]
[ext_resource path="res://anim/3t-princess-dragon0018.png" type="Texture" id=61]
[ext_resource path="res://anim/3t-princess-dragon0019.png" type="Texture" id=62]
[ext_resource path="res://anim/3t-princess-dragon0020.png" type="Texture" id=63]
[ext_resource path="res://anim/3t-princess-dragon0021.png" type="Texture" id=64]
[ext_resource path="res://anim/3t-princess-dragon0022.png" type="Texture" id=65]
[ext_resource path="res://anim/3t-princess-dragon0023.png" type="Texture" id=66]
[ext_resource path="res://anim/3t-invitation-dragon0000.png" type="Texture" id=67]
[ext_resource path="res://anim/3t-invitation-dragon0001.png" type="Texture" id=68]
[ext_resource path="res://anim/3t-invitation-dragon0002.png" type="Texture" id=69]
[ext_resource path="res://anim/3t-invitation-dragon0003.png" type="Texture" id=70]
[ext_resource path="res://anim/3t-invitation-dragon0004.png" type="Texture" id=71]
[ext_resource path="res://anim/3t-invitation-dragon0005.png" type="Texture" id=72]
[ext_resource path="res://anim/3t-invitation-dragon0006.png" type="Texture" id=73]
[ext_resource path="res://anim/3t-invitation-dragon0007.png" type="Texture" id=74]
[ext_resource path="res://anim/3t-invitation-dragon0008.png" type="Texture" id=75]
[ext_resource path="res://anim/3t-invitation-dragon0009.png" type="Texture" id=76]
[ext_resource path="res://anim/3t-invitation-dragon0010.png" type="Texture" id=77]
[ext_resource path="res://anim/3t-invitation-dragon0011.png" type="Texture" id=78]
[ext_resource path="res://anim/3t-invitation-dragon0012.png" type="Texture" id=79]
[ext_resource path="res://anim/3t-invitation-dragon0013.png" type="Texture" id=80]
[ext_resource path="res://anim/3t-invitation-dragon0014.png" type="Texture" id=81]
[ext_resource path="res://anim/3t-invitation-dragon0015.png" type="Texture" id=82]
[ext_resource path="res://anim/3t-invitation-dragon0016.png" type="Texture" id=83]
[ext_resource path="res://anim/3t-invitation-dragon0017.png" type="Texture" id=84]
[ext_resource path="res://anim/3t-invitation-dragon0018.png" type="Texture" id=85]
[ext_resource path="res://anim/3t-invitation-dragon0019.png" type="Texture" id=86]
[ext_resource path="res://anim/3t-invitation-dragon0020.png" type="Texture" id=87]
[ext_resource path="res://anim/3t-invitation-dragon0021.png" type="Texture" id=88]
[ext_resource path="res://anim/3t-invitation-dragon0022.png" type="Texture" id=89]
[ext_resource path="res://anim/3t-invitation-dragon0023.png" type="Texture" id=90]
[ext_resource path="res://anim/3t-invitation-dragon0024.png" type="Texture" id=91]
[ext_resource path="res://anim/3t-invitation-dragon0025.png" type="Texture" id=92]
[ext_resource path="res://anim/3t-invitation-dragon0026.png" type="Texture" id=93]
[ext_resource path="res://anim/3t-invitation-dragon0027.png" type="Texture" id=94]
[ext_resource path="res://anim/3t-invitation-dragon0028.png" type="Texture" id=95]
[ext_resource path="res://anim/3t-invitation-dragon0029.png" type="Texture" id=96]
[ext_resource path="res://anim/3t-invitation-dragon0030.png" type="Texture" id=97]
[ext_resource path="res://anim/3t-invitation-dragon0031.png" type="Texture" id=98]
[ext_resource path="res://anim/3t-invitation-dragon0032.png" type="Texture" id=99]
[ext_resource path="res://anim/3t-invitation-dragon0033.png" type="Texture" id=100]
[ext_resource path="res://anim/3t-invitation-dragon0034.png" type="Texture" id=101]
[ext_resource path="res://anim/3t-invitation-dragon0035.png" type="Texture" id=102]
[ext_resource path="res://anim/3t-invitation-dragon0036.png" type="Texture" id=103]
[ext_resource path="res://anim/3t-invitation-dragon0037.png" type="Texture" id=104]
[ext_resource path="res://anim/3t-invitation-man-1-0000.png" type="Texture" id=105]
[ext_resource path="res://anim/3t-invitation-man-1-0001.png" type="Texture" id=106]
[ext_resource path="res://anim/3t-invitation-man-1-0002.png" type="Texture" id=107]
[ext_resource path="res://anim/3t-invitation-man-1-0003.png" type="Texture" id=108]
[ext_resource path="res://anim/3t-invitation-man-1-0004.png" type="Texture" id=109]
[ext_resource path="res://anim/3t-invitation-man-1-0005.png" type="Texture" id=110]
[ext_resource path="res://anim/3t-invitation-man-1-0006.png" type="Texture" id=111]
[ext_resource path="res://anim/3t-invitation-man-1-0007.png" type="Texture" id=112]
[ext_resource path="res://anim/3t-invitation-man-1-0008.png" type="Texture" id=113]
[ext_resource path="res://anim/3t-invitation-man-1-0009.png" type="Texture" id=114]
[ext_resource path="res://anim/3t-invitation-man-1-0010.png" type="Texture" id=115]
[ext_resource path="res://anim/3t-invitation-man-1-0011.png" type="Texture" id=116]
[ext_resource path="res://anim/3t-invitation-man-1-0012.png" type="Texture" id=117]
[ext_resource path="res://anim/3t-invitation-man-1-0013.png" type="Texture" id=118]
[ext_resource path="res://anim/3t-invitation-man-1-0014.png" type="Texture" id=119]
[ext_resource path="res://anim/3t-invitation-man-1-0015.png" type="Texture" id=120]
[ext_resource path="res://anim/3t-invitation-man-2-0000.png" type="Texture" id=121]
[ext_resource path="res://anim/3t-invitation-man-2-0001.png" type="Texture" id=122]
[ext_resource path="res://anim/3t-invitation-man-2-0002.png" type="Texture" id=123]
[ext_resource path="res://anim/3t-invitation-man-2-0003.png" type="Texture" id=124]
[ext_resource path="res://anim/3t-invitation-man-2-0004.png" type="Texture" id=125]
[ext_resource path="res://anim/3t-invitation-man-2-0005.png" type="Texture" id=126]
[ext_resource path="res://anim/3t-invitation-man-2-0006.png" type="Texture" id=127]
[ext_resource path="res://anim/3t-invitation-man-2-0007.png" type="Texture" id=128]
[ext_resource path="res://anim/3t-invitation-man-2-0008.png" type="Texture" id=129]
[ext_resource path="res://anim/3t-invitation-man-2-0009.png" type="Texture" id=130]
[ext_resource path="res://anim/3t-invitation-man-2-0010.png" type="Texture" id=131]
[ext_resource path="res://anim/3t-invitation-man-2-0011.png" type="Texture" id=132]
[ext_resource path="res://ui/repeat-tuto.tscn" type="PackedScene" id=133]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=134]
[ext_resource path="res://ui/HUD2.tscn" type="PackedScene" id=135]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="Animation" id=5]

resource_name = "timer"
length = 2.0
loop = false
step = 0.1

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 52 ), ExtResource( 52 ), ExtResource( 52 ), ExtResource( 52 ), ExtResource( 52 ), ExtResource( 52 ), ExtResource( 52 ), ExtResource( 52 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=7]

animations = [ {
"frames": [ ExtResource( 53 ), ExtResource( 53 ), ExtResource( 53 ), ExtResource( 53 ), ExtResource( 53 ), ExtResource( 53 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="Animation" id=8]

resource_name = "fade-out"
length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Fade_Out/Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=9]

animations = [ {
"frames": [ ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 101 ), ExtResource( 104 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 101 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=10]

animations = [ {
"frames": [ ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ), ExtResource( 120 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=11]

animations = [ {
"frames": [ ExtResource( 121 ), ExtResource( 122 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 126 ), ExtResource( 127 ), ExtResource( 128 ), ExtResource( 129 ), ExtResource( 130 ), ExtResource( 131 ), ExtResource( 132 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[node name="dragon" type="Node2D"]

script = ExtResource( 1 )

[node name="background" parent="." instance=ExtResource( 2 )]

[node name="DragonMan" type="AnimatedSprite" parent="."]

position = Vector2( 147.939, 381.724 )
frames = SubResource( 1 )
animation = "default"
frame = 2
playing = true

[node name="DragonWoman" type="AnimatedSprite" parent="."]

position = Vector2( 640, 360 )
frames = SubResource( 2 )
animation = "default"
frame = 9
playing = true
_sections_unfolded = [ "Transform" ]

[node name="Man_stand" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 171.588, 366.372 )
frames = SubResource( 3 )
animation = "default"

[node name="Dragon_while_man_stand" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 640, 360 )
frames = SubResource( 4 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="Frame_Timer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/timer = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Frame_Knight" type="Sprite" parent="."]

visible = false
position = Vector2( 374.685, 360 )
texture = ExtResource( 43 )

[node name="Frame_Dragon" type="Sprite" parent="."]

visible = false
position = Vector2( 917.588, 360 )
texture = ExtResource( 44 )

[node name="Man_princess" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 189.498, 332.639 )
frames = SubResource( 6 )
animation = "default"

[node name="Dragon_wizard" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 640, 360 )
frames = SubResource( 7 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="Fade_Out" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/fade-out = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Black" type="ColorRect" parent="Fade_Out"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Dragon_invitation" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 747.951, 346.392 )
frames = SubResource( 9 )
animation = "default"

[node name="Man_invitation" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 148, 393 )
frames = SubResource( 10 )
animation = "default"

[node name="Man_invitation_stand_up" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 171.62, 370.674 )
frames = SubResource( 11 )
animation = "default"

[node name="Button_man" type="TextureButton" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 254.0
margin_right = 281.0
margin_bottom = 661.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[node name="Button_woman" type="TextureButton" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 342.0
margin_top = 2.0
margin_right = 1282.0
margin_bottom = 696.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[node name="repeat-tuto" parent="." instance=ExtResource( 133 )]

position = Vector2( -70, 203 )

[node name="HUD" parent="." instance=ExtResource( 134 )]

[node name="HUD2" parent="." instance=ExtResource( 135 )]

[connection signal="animation_finished" from="Man_stand" to="." method="_on_Man_stand_animation_finished"]

[connection signal="animation_finished" from="Dragon_while_man_stand" to="." method="_on_Dragon_while_man_stand_animation_finished"]

[connection signal="animation_finished" from="Frame_Timer" to="." method="_on_Frame_Timer_animation_finished"]

[connection signal="animation_finished" from="Man_princess" to="." method="_on_Man_princess_animation_finished"]

[connection signal="animation_finished" from="Dragon_wizard" to="." method="_on_Dragon_wizard_animation_finished"]

[connection signal="animation_finished" from="Fade_Out" to="." method="_on_Fade_Out_animation_finished"]

[connection signal="animation_finished" from="Man_invitation" to="." method="_on_Man_invitation_animation_finished"]

[connection signal="animation_finished" from="Man_invitation_stand_up" to="." method="_on_Man_invitation_stand_up_animation_finished"]

[connection signal="pressed" from="Button_man" to="." method="_on_Button_man_pressed"]

[connection signal="pressed" from="Button_woman" to="." method="_on_Button_woman_pressed"]


